--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "publisher": "glitchlover",
   "version": "1.0.0",
   "repository": {
-    "url": ""
+    "url": "https://github.com/glitchlover/peaceful-mind"
   },
   "engines": {
     "vscode": "^1.84.0"
